--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
         expose:
             - 3306
         environment:
-            MYSQL_ROOT_PASSWORD: secret
-            MYSQL_DATABASE: project
-            MYSQL_USER: project
-            MYSQL_PASSWORD: project
+            MYSQL_ROOT_PASSWORD: zend
+            MYSQL_DATABASE: zend
+            MYSQL_USER: zend
+            MYSQL_PASSWORD: zend
